--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body ng-app="myApp" ng-controller="videoCtrl">
 <h2>Welcome to the awesome video app!</h2>
+
 <!-- form to add new entires -->
 <form ng-submit="addVideo()">
     <input type="text" ng-model="videoInput" size="50" placeholder="Add New video">
@@ -26,7 +27,15 @@
 <p><button ng-click="removeVideo()">Remove marked video</button></p>
 
 <!-- You can use 'youtube-video' as an element or attribute. -->
-<youtube-video video-id="theBestVideo"></youtube-video>
+<div class="col-md-12" ng-repeat="video in videos">
+	<div class="row">
+		<div class="col-md-3" id="video.title">
+			<h2>{video.title}</h2>
+			<youtube-video video-id={{video.id}}></youtube-video>
+		</div>
+	</div>
+</div>
+
 
 </body>
 </html>
