--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <title>Shake that App!</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+ 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
 
@@ -17,77 +21,79 @@
 
 <body ng-app="myApp" ng-controller="videoCtrl">
 	<div id="container">
-		<div id="header">
-			<h2>Lock'n'roll!</h2>
+
+		<div id="header" class="col-md-12 col-xs-12">
+			<h1>Lock'n'roll!</h1>
 			<p>Bring the lock to the roll, while having a stroll</p>
 		</div>
 
-		<!-- form to add new entires -->
-		<div id="adding">
+	<!--form to add new entires -->
+		<div id="adding" class="col-md-12 col-xs-12">
 			<form ng-submit="addVideo()">
-			    <input type="text" ng-model="videoInput" size="50" placeholder="Add New video">
-			    <input type="submit" value="Add New">
+			    <input class="videoInput" type="text" ng-model="input" size="50" placeholder="Add New video">
+			   	<input class="videoInput" type="text" ng-model="input" size="50" placeholder="Add New video">
+			    <input class="videoInput" type="text" ng-model="input" size="50" placeholder="Add New video">
+
+			    <div class="col-xs-12"><input class="btn btn-primary" type="submit" value="Add New"></div>
 			</form>
 		</div>
 
 		<!-- list entries -->
-		<div id="allVideos" class="col-md-12">
+		<div id="allVideos" class="col-md-12 col-xs-12">
 			<h2>Your videos</h2>
 			<p>You have {{videoList.length}} videos</p>
-			<div ng-repeat="x in videoList" class="video col-md-2">
+			<div ng-repeat="x in videoList" class="video">
 		   		<input type="checkbox" ng-model="x.done" />
 		   		<span ng-bind="x.videoText"></span>
 			</div>
-			<div class="col-md-12">
-				<button id="removeButton" ng-click="removeVideo()">Remove marked video</button>
+			<div >
+				<button id="removeButton" class="btn" ng-click="removeVideo()">Remove marked video</button>
 			</div>
 		</div>
 
 
 		<!-- You can use 'youtube-video' as an element or attribute. -->
-		<div class="col-md-4 bigVideos" ng-repeat="video in videos">	
-			<div class="row">
-				<h2>{{video.title}}</h2>
+		<div class="bigVideos col-md-12 col-xs-12" ng-repeat="video in videos">	
+
+				<h3>{{video.title}}</h3>
 				<p>Rating: {{video.ratingSum}}</p>
 				<youtube-video video-id="video.id"></youtube-video>
+			
 				<div class="row">
-					<p>Rate this video</p>
+					<h4>Rate this video</h4>
 
-					<button class="ratingButton" type="button" ng-click="addRating(1, video)">1</button>
-					<button class="ratingButton" type="button" ng-click="addRating(2, video)">2</button>
-					<button class="ratingButton" type="button" ng-click="addRating(3, video)">3</button>
-					<button class="ratingButton" type="button" ng-click="addRating(4, video)">4</button>
-					<button class="ratingButton" type="button" ng-click="addRating(5, video)">5</button>
+					<button class="btn" type="button" ng-click="addRating(1, video)">1</button>
+					<button class="btn" type="button" ng-click="addRating(2, video)">2</button>
+					<button class="btn" type="button" ng-click="addRating(3, video)">3</button>
+					<button class="btn" type="button" ng-click="addRating(4, video)">4</button>
+					<button class="btn" type="button" ng-click="addRating(5, video)">5</button>
 				</div>
-				<div class="row">
-			  		<p>Comment on this video</p>
-			  		<input type="text" ng-model="comment">
-			  		<input type="submit" value="Add comment" ng-click="addComment(comment, video.id)">
+
+				<div>
+			  		<h4>Comment on this video</h4>
+			  		<input type="text" class="input" ng-model="comment">
+			  		<input type="submit" value="Add comment" class="btn" ng-click="addComment(comment, video.id)">
 			  	</div>
+
 			  	<div class="row commentField">
 			  		There are {{video.comments.length}} comments
 			  		<div ng-repeat="comment in video.comments" class="comments">
 			  			<p>Comment: {{comment}}
-			  				<button type="button" ng-click="removeComment($index,video)">X</button>
+			  				<button type="button" class="btn" ng-click="removeComment($index,video)">X</button>
 			  			</p>
 			  		</div>	
 			  	</div>
-			</div>
 		</div>
 
 		<div class="col-md-12">	
-				<div class="row" ng-repeat="video in videos">
-					<div class="col-md-3" ng-click="">
-						<h2>{{video.title}}</h2>
-						<p>THUMBNAIL HERE</p>
-					</div>
+			<div class="row" ng-repeat="video in videos">
+				<div class="col-md-3" ng-click="">
+					<h2>{{video.title}}</h2>
+					<p>THUMBNAIL HERE</p>
 				</div>
 			</div>
 		</div>
+
 	</div>
-</div>
-
-
-
 </body>
 </html> 
