--- a/index.html
+++ b/index.html
@@ -29,37 +29,32 @@
 
 	<!--form to add new entires -->
 		<div id="adding" class="col-md-12 col-xs-12">
-			<form ng-submit="addVideo()">
-			    <input class="videoInput" type="text" ng-model="input" size="50" placeholder="Add New video">
-			   	<input class="videoInput" type="text" ng-model="input" size="50" placeholder="Add New video">
-			    <input class="videoInput" type="text" ng-model="input" size="50" placeholder="Add New video">
-
-			    <div class="col-xs-12"><input class="btn btn-primary" type="submit" value="Add New"></div>
+			<form ng-submit="addVideoToLibrary()">
+			    <input class="input" type="text" ng-model="videoId" size="50" placeholder="Enter ID">
+			    <input class="input" type="text" ng-model="videoTitle" size="50" placeholder="Enter Title">
+			    <select name="category" value="Category" ng-model="videoCategory">
+				  <option value="socks">With socks</option>
+				  <option value="fail">Epic fail</option>
+				  <option value="normal">Nice</option>
+				</select>
+			    <input type="submit" class="btn" value="Add New">
 			</form>
 		</div>
 
-		<!-- list entries -->
-		<div id="allVideos" class="col-md-12 col-xs-12">
-			<h2>Your videos</h2>
-			<p>You have {{videoList.length}} videos</p>
-			<div ng-repeat="x in videoList" class="video">
-		   		<input type="checkbox" ng-model="x.done" />
-		   		<span ng-bind="x.videoText"></span>
-			</div>
-			<div >
-				<button id="removeButton" class="btn" ng-click="removeVideo()">Remove marked video</button>
-			</div>
-		</div>
+		
 
 
 		<!-- You can use 'youtube-video' as an element or attribute. -->
 		<div class="bigVideos col-md-12 col-xs-12" ng-repeat="video in videos">	
 
-				<h3>{{video.title}}</h3>
+				<div class="col-xs-12">
+				<div class="row"><h4>{{video.title}}</h4>
+				<button type="button" class="btn" ng-click="removeVideo($index,video)"> X </button></div></div>
+				<h5>Category: {{video.category}}</h5>
 				<p>Rating: {{video.ratingSum}}</p>
-				<youtube-video video-id="video.id"></youtube-video>
-			
+				<youtube-video video-id="video.id" style="width:auto;height:auto;"></youtube-video>
 				<div class="row">
+
 					<h4>Rate this video</h4>
 
 					<button class="btn" type="button" ng-click="addRating(1, video)">1</button>
@@ -83,15 +78,6 @@
 			  			</p>
 			  		</div>	
 			  	</div>
-		</div>
-
-		<div class="col-md-12">	
-			<div class="row" ng-repeat="video in videos">
-				<div class="col-md-3" ng-click="">
-					<h2>{{video.title}}</h2>
-					<p>THUMBNAIL HERE</p>
-				</div>
-			</div>
 		</div>
 
 	</div>
