--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="jquery/dist/jquery.js"></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- added two library files to do youtube embeds easy as pie -->
-     <script src="https://www.youtube.com/iframe_api"></script>
+     <script src="https://m.youtube.com/iframe_api"></script>
     <script src="angular-youtube-embed.js"></script>
     <script src="videoCtrl.js"></script>
 </head>
@@ -32,13 +33,15 @@
 			<form ng-submit="addVideoToLibrary()">
 			   <div class="col-md-12"> <input class="input" type="text" ng-model="videoId" size="50" placeholder="Enter ID"></div>
 			   <div class="col-md-12"><input class="input" type="text" ng-model="videoTitle" size="50" placeholder="Enter Title"></div>
-			   <div class="col-md-12"> <select class="dropdown" name="category" value="Category" ng-model="videoCategory">
+			   <div class="col-md-12"> 
+			   <div class="col-xs-6 col-sm-6 col-md-6">
+			   <select class="from-control"><ng-model="videoCategory"/>
 				  <option value="socks">With socks</option>
 				  <option value="fail">Epic fail</option>
 				  <option value="normal">Nice</option>
 				</select>
 				</div>
-			    <input type="submit" class="btn" value="Add New">
+			    <input type="submit" class="btn btn-primary" value="Add New">
 			</form>
 		</div>
 
@@ -51,7 +54,7 @@
 				<div class="col-xs-12">
 					<div class="row">
 					<h4>
-						<button type="button" class="btn" id="remove" ng-click="removeVideo($index,video)"><p>X</p></button> {{video.title}}</h4>
+						<button type="button" class="btn btn-primary" id="remove" ng-click="removeVideo($index,video)"><p>X</p></button> {{video.title}}</h4>
 					
 					</div>
 				</div>
@@ -73,14 +76,14 @@
 				<div>
 			  		<h4>Comment on this video</h4>
 			  		<input type="text" class="input" ng-model="comment">
-			  		<input type="submit" value="Add comment" class="btn" ng-click="addComment(comment, video.id)">
+			  		<input type="submit" value="Add comment" class="btn btn-primary" ng-click="addComment(comment, video.id)">
 			  	</div>
 
 			  	<div class="row commentField">
 			  		There are {{video.comments.length}} comments
 			  		<div ng-repeat="comment in video.comments" class="comments">
 			  			<p>Comment: {{comment}}
-			  				<button type="button" class="btn" ng-click="removeComment($index,video)">X</button>
+			  				<button type="button" class="btn btn-primary" ng-click="removeComment($index,video)">X</button>
 			  			</p>
 			  		</div>	
 			  	</div>
