--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
 
 
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+ 	<script data-require="angular.js@1.3.11" data-semver="1.3.11" src="https://code.angularjs.org/1.3.11/angular.js"></script>
     <script src="jquery/dist/jquery.js"></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 
@@ -18,6 +18,9 @@
      <script src="https://m.youtube.com/iframe_api"></script>
     <script src="angular-youtube-embed.js"></script>
     <script src="videoCtrl.js"></script>
+
+    <script src="angular-cookies.min.js"></script>
+    <script src="angularLocalStorage.js"></script>
 </head>
 
 <body ng-app="myApp" ng-controller="videoCtrl">
